force-app/main/default/objects/Partner_Portfolio_Snapshot__c/Partner_Portfolio_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Partner Portfolio Snapshot</label>
    <pluralLabel>Partner Portfolio Snapshots</pluralLabel>
    <nameField>
        <displayFormat>PPS-{00000000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>