force-app/main/default/objects/Partner_Portfolio_Snapshot__c/fields/Active_Engagement_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Engagement_Count__c</fullName>
    <label>Active Engagement Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>