force-app/main/default/objects/Partner_Portfolio_Snapshot__c/fields/At_Risk_Deal_Count__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Deal_Count__c</fullName>
    <label>At Risk Deal Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>