force-app/main/default/objects/Partner_Portfolio_Snapshot__c/fields/Churned_Engagement_Count_Trailing_12mo__c.field-meta.xml
<CustomField>
    <fullName>Churned_Engagement_Count_Trailing_12mo__c</fullName>
    <label>Churned Engagements (Trailing 12mo)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>