force-app/main/default/objects/Partner_Portfolio_Snapshot__c/fields/Health_Label__c.field-meta.xml
<CustomField>
    <fullName>Health_Label__c</fullName>
    <label>Health Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>