force-app/main/default/objects/Partner_Portfolio_Snapshot__c/fields/Open_Deal_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Deal_Count__c</fullName>
    <label>Open Deal Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>