force-app/main/default/objects/Partner_Portfolio_Snapshot__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <label>Partner Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Portfolio Snapshots</relationshipLabel>
    <relationshipName>Portfolio_Snapshots</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>