force-app/main/default/objects/Partner_Portfolio_Snapshot__c/fields/Renewal_Value_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Value_At_Risk__c</fullName>
    <label>Renewal Value At Risk</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>