force-app/main/default/objects/Partner_Portfolio_Snapshot__c/fields/Upcoming_Renewal_Count__c.field-meta.xml
<CustomField>
    <fullName>Upcoming_Renewal_Count__c</fullName>
    <label>Upcoming Renewal Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>